--- a/src/styles/form/_form.scss
+++ b/src/styles/form/_form.scss
@@ -8,9 +8,12 @@
   .image-container {
     position: relative;
 
+
+
     img {
       width: 100%;
       border-radius: 5px;
+      height:100%
     }
   }
 
